# clearning

./: run.py
app/: CMakeLists.txt
app/inc/: loggers.h
app/lib/: comm.lib
app/parser/: CMakeLists.txt
app/parser/inc/: parser.h  parser_a.h  parser_generator.h
app/parser/src/: parser.c  parser_a.c  parser_generator.c
app/src/: main.c
app/sync_mgr/: CMakeLists.txt
app/sync_mgr/inc/: sync_mgr.h
app/sync_mgr/src/: snyc_mgr.c  sync_mgr_a.c
app/twcc/: CMakeLists.txt
app/twcc/inc/: twc_handler.h  twcc.h  twcc_oobe_handler.h  twcc_wom_handler.h
app/twcc/src/: twc_handler.c  twcc.c  twcc_oobe_handler.c  twcc_wom_handler.c
build_com/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  comm.sln  comm.vcxproj  comm.vcxproj.filters
build_com/comm.dir/Debug/: comm.lib.recipe
build_com/comm.dir/Debug/comm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_com/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_com/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog
build_com/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
comm/: CMakeLists.txt
comm/inc/: comm.h
comm/src/: comm.c
